gramatica_v4Parser.py
# Generated from gramatica_v4.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


# Módulo de Árbol Sintáctico - Lógica de Estructura G4


class gramatica_v4Parser ( Parser ):

    grammarFileName = "gramatica_v4.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", 
                     "'=='", "<INVALID>", "'>'", "'<'", "'>='", "'<='", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'='", "';'", 
                     "','", "'('", "')'", "'{'", "'}'", "'['", "']'", "':'", 
                     "'?'", "'.'", "<INVALID>", "'INICIO'", "'FIN'", "<INVALID>", 
                     "'ENTONCES'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'IMPORT'", "<INVALID>", 
                     "<INVALID>", "'switch'", "'case'", "'default'", "'struct'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "TK_SUMA", "TK_RESTA", "TK_MULT", "TK_DIV", 
                      "TK_MODULO", "TK_POTENCIA", "TK_IGUAL", "TK_DIFERENTE", 
                      "TK_MAYOR", "TK_MENOR", "TK_MAYOREQ", "TK_MENOREQ", 
                      "TK_Y", "TK_O", "TK_NOT", "ASSIGN", "SEMICOLON", "TK_COMA", 
                      "TK_PAR_IZQ", "TK_PAR_DER", "TK_LLA_IZQ", "TK_LLA_DER", 
                      "TK_COR_IZQ", "TK_COR_DER", "TK_DOS_PUNTOS", "TK_INTERROGACION", 
                      "TK_PUNTO", "TK_PROGRAMA", "TK_INICIO", "TK_FIN", 
                      "TK_SI", "TK_ENTONCES", "TK_SINO", "TK_MIENTRAS", 
                      "TK_FOR", "TK_IMPRIMIR", "TK_RETURN", "TK_IMPORT", 
                      "TK_BREAK", "TK_CONTINUE", "TK_SWITCH", "TK_CASE", 
                      "TK_DEFAULT", "TK_STRUCT", "TK_INT", "TK_FLOAT", "TK_STRING", 
                      "TK_BOOL", "TK_VOID", "TK_TRUE", "TK_FALSE", "TK_NUMERO", 
                      "TK_CADENA", "TK_ID", "WS", "COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_structDeclaration = 2
    RULE_structField = 3
    RULE_importacion = 4
    RULE_varDeclaration = 5
    RULE_arrayLiteral = 6
    RULE_funcDeclaration = 7
    RULE_params = 8
    RULE_param = 9
    RULE_type = 10
    RULE_instruccion = 11
    RULE_switchStatement = 12
    RULE_caseStatement = 13
    RULE_defaultStatement = 14
    RULE_bloque = 15
    RULE_lvalue = 16
    RULE_asignacion_core = 17
    RULE_condicional = 18
    RULE_bucle_mientras = 19
    RULE_bucle_for = 20
    RULE_impresion = 21
    RULE_sentencia_return = 22
    RULE_expr = 23
    RULE_args = 24

    ruleNames =  [ "program", "declaration", "structDeclaration", "structField", 
                   "importacion", "varDeclaration", "arrayLiteral", "funcDeclaration", 
                   "params", "param", "type", "instruccion", "switchStatement", 
                   "caseStatement", "defaultStatement", "bloque", "lvalue", 
                   "asignacion_core", "condicional", "bucle_mientras", "bucle_for", 
                   "impresion", "sentencia_return", "expr", "args" ]

    EOF = Token.EOF
    TK_SUMA=1
    TK_RESTA=2
    TK_MULT=3
    TK_DIV=4
    TK_MODULO=5
    TK_POTENCIA=6
    TK_IGUAL=7
    TK_DIFERENTE=8
    TK_MAYOR=9
    TK_MENOR=10
    TK_MAYOREQ=11
    TK_MENOREQ=12
    TK_Y=13
    TK_O=14
    TK_NOT=15
    ASSIGN=16
    SEMICOLON=17
    TK_COMA=18
    TK_PAR_IZQ=19
    TK_PAR_DER=20
    TK_LLA_IZQ=21
    TK_LLA_DER=22
    TK_COR_IZQ=23
    TK_COR_DER=24
    TK_DOS_PUNTOS=25
    TK_INTERROGACION=26
    TK_PUNTO=27
    TK_PROGRAMA=28
    TK_INICIO=29
    TK_FIN=30
    TK_SI=31
    TK_ENTONCES=32
    TK_SINO=33
    TK_MIENTRAS=34
    TK_FOR=35
    TK_IMPRIMIR=36
    TK_RETURN=37
    TK_IMPORT=38
    TK_BREAK=39
    TK_CONTINUE=40
    TK_SWITCH=41
    TK_CASE=42
    TK_DEFAULT=43
    TK_STRUCT=44
    TK_INT=45
    TK_FLOAT=46
    TK_STRING=47
    TK_BOOL=48
    TK_VOID=49
    TK_TRUE=50
    TK_FALSE=51
    TK_NUMERO=52
    TK_CADENA=53
    TK_ID=54
    WS=55
    COMMENT=56
    BLOCK_COMMENT=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_program

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ProgramG4Context(ProgramContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.ProgramContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TK_PROGRAMA(self):
            return self.getToken(gramatica_v4Parser.TK_PROGRAMA, 0)
        def TK_ID(self):
            return self.getToken(gramatica_v4Parser.TK_ID, 0)
        def TK_INICIO(self):
            return self.getToken(gramatica_v4Parser.TK_INICIO, 0)
        def TK_FIN(self):
            return self.getToken(gramatica_v4Parser.TK_FIN, 0)
        def EOF(self):
            return self.getToken(gramatica_v4Parser.EOF, 0)
        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v4Parser.DeclarationContext)
            else:
                return self.getTypedRuleContext(gramatica_v4Parser.DeclarationContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramG4" ):
                listener.enterProgramG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramG4" ):
                listener.exitProgramG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramG4" ):
                return visitor.visitProgramG4(self)
            else:
                return visitor.visitChildren(self)



    def program(self):

        localctx = gramatica_v4Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            localctx = gramatica_v4Parser.ProgramG4Context(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(gramatica_v4Parser.TK_PROGRAMA)
            self.state = 51
            self.match(gramatica_v4Parser.TK_ID)
            self.state = 52
            self.match(gramatica_v4Parser.TK_INICIO)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 36015587849699328) != 0):
                self.state = 53
                self.declaration()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 59
            self.match(gramatica_v4Parser.TK_FIN)
            self.state = 60
            self.match(gramatica_v4Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_declaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DeclStructG4Context(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def structDeclaration(self):
            return self.getTypedRuleContext(gramatica_v4Parser.StructDeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclStructG4" ):
                listener.enterDeclStructG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclStructG4" ):
                listener.exitDeclStructG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclStructG4" ):
                return visitor.visitDeclStructG4(self)
            else:
                return visitor.visitChildren(self)


    class DeclImportG4Context(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def importacion(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ImportacionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclImportG4" ):
                listener.enterDeclImportG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclImportG4" ):
                listener.exitDeclImportG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclImportG4" ):
                return visitor.visitDeclImportG4(self)
            else:
                return visitor.visitChildren(self)


    class DeclInstruccionG4Context(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def instruccion(self):
            return self.getTypedRuleContext(gramatica_v4Parser.InstruccionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclInstruccionG4" ):
                listener.enterDeclInstruccionG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclInstruccionG4" ):
                listener.exitDeclInstruccionG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclInstruccionG4" ):
                return visitor.visitDeclInstruccionG4(self)
            else:
                return visitor.visitChildren(self)


    class DeclVariableG4Context(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varDeclaration(self):
            return self.getTypedRuleContext(gramatica_v4Parser.VarDeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclVariableG4" ):
                listener.enterDeclVariableG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclVariableG4" ):
                listener.exitDeclVariableG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclVariableG4" ):
                return visitor.visitDeclVariableG4(self)
            else:
                return visitor.visitChildren(self)


    class DeclFuncionG4Context(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcDeclaration(self):
            return self.getTypedRuleContext(gramatica_v4Parser.FuncDeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclFuncionG4" ):
                listener.enterDeclFuncionG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclFuncionG4" ):
                listener.exitDeclFuncionG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclFuncionG4" ):
                return visitor.visitDeclFuncionG4(self)
            else:
                return visitor.visitChildren(self)



    def declaration(self):

        localctx = gramatica_v4Parser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = gramatica_v4Parser.DeclVariableG4Context(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.varDeclaration()
                pass

            elif la_ == 2:
                localctx = gramatica_v4Parser.DeclFuncionG4Context(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.funcDeclaration()
                pass

            elif la_ == 3:
                localctx = gramatica_v4Parser.DeclStructG4Context(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.structDeclaration()
                pass

            elif la_ == 4:
                localctx = gramatica_v4Parser.DeclImportG4Context(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 65
                self.importacion()
                pass

            elif la_ == 5:
                localctx = gramatica_v4Parser.DeclInstruccionG4Context(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 66
                self.instruccion()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TK_STRUCT(self):
            return self.getToken(gramatica_v4Parser.TK_STRUCT, 0)

        def TK_ID(self):
            return self.getToken(gramatica_v4Parser.TK_ID, 0)

        def TK_LLA_IZQ(self):
            return self.getToken(gramatica_v4Parser.TK_LLA_IZQ, 0)

        def TK_LLA_DER(self):
            return self.getToken(gramatica_v4Parser.TK_LLA_DER, 0)

        def structField(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v4Parser.StructFieldContext)
            else:
                return self.getTypedRuleContext(gramatica_v4Parser.StructFieldContext,i)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_structDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDeclaration" ):
                listener.enterStructDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDeclaration" ):
                listener.exitStructDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDeclaration" ):
                return visitor.visitStructDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def structDeclaration(self):

        localctx = gramatica_v4Parser.StructDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_structDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(gramatica_v4Parser.TK_STRUCT)
            self.state = 70
            self.match(gramatica_v4Parser.TK_ID)
            self.state = 71
            self.match(gramatica_v4Parser.TK_LLA_IZQ)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 19105114044235776) != 0):
                self.state = 72
                self.structField()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(gramatica_v4Parser.TK_LLA_DER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructFieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(gramatica_v4Parser.TypeContext,0)


        def TK_ID(self):
            return self.getToken(gramatica_v4Parser.TK_ID, 0)

        def SEMICOLON(self):
            return self.getToken(gramatica_v4Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_structField

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructField" ):
                listener.enterStructField(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructField" ):
                listener.exitStructField(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructField" ):
                return visitor.visitStructField(self)
            else:
                return visitor.visitChildren(self)




    def structField(self):

        localctx = gramatica_v4Parser.StructFieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_structField)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.type_()
            self.state = 81
            self.match(gramatica_v4Parser.TK_ID)
            self.state = 82
            self.match(gramatica_v4Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TK_IMPORT(self):
            return self.getToken(gramatica_v4Parser.TK_IMPORT, 0)

        def TK_ID(self):
            return self.getToken(gramatica_v4Parser.TK_ID, 0)

        def SEMICOLON(self):
            return self.getToken(gramatica_v4Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_importacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportacion" ):
                listener.enterImportacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportacion" ):
                listener.exitImportacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportacion" ):
                return visitor.visitImportacion(self)
            else:
                return visitor.visitChildren(self)




    def importacion(self):

        localctx = gramatica_v4Parser.ImportacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_importacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(gramatica_v4Parser.TK_IMPORT)
            self.state = 85
            self.match(gramatica_v4Parser.TK_ID)
            self.state = 86
            self.match(gramatica_v4Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_varDeclaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VarDeclarationG4Context(VarDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.VarDeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(gramatica_v4Parser.TypeContext,0)

        def TK_ID(self):
            return self.getToken(gramatica_v4Parser.TK_ID, 0)
        def SEMICOLON(self):
            return self.getToken(gramatica_v4Parser.SEMICOLON, 0)
        def ASSIGN(self):
            return self.getToken(gramatica_v4Parser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclarationG4" ):
                listener.enterVarDeclarationG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclarationG4" ):
                listener.exitVarDeclarationG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclarationG4" ):
                return visitor.visitVarDeclarationG4(self)
            else:
                return visitor.visitChildren(self)


    class VarArrayDeclarationG4Context(VarDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.VarDeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(gramatica_v4Parser.TypeContext,0)

        def TK_COR_IZQ(self):
            return self.getToken(gramatica_v4Parser.TK_COR_IZQ, 0)
        def TK_COR_DER(self):
            return self.getToken(gramatica_v4Parser.TK_COR_DER, 0)
        def TK_ID(self):
            return self.getToken(gramatica_v4Parser.TK_ID, 0)
        def ASSIGN(self):
            return self.getToken(gramatica_v4Parser.ASSIGN, 0)
        def arrayLiteral(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ArrayLiteralContext,0)

        def SEMICOLON(self):
            return self.getToken(gramatica_v4Parser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarArrayDeclarationG4" ):
                listener.enterVarArrayDeclarationG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarArrayDeclarationG4" ):
                listener.exitVarArrayDeclarationG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarArrayDeclarationG4" ):
                return visitor.visitVarArrayDeclarationG4(self)
            else:
                return visitor.visitChildren(self)



    def varDeclaration(self):

        localctx = gramatica_v4Parser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varDeclaration)
        self._la = 0 # Token type
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = gramatica_v4Parser.VarDeclarationG4Context(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.type_()
                self.state = 89
                self.match(gramatica_v4Parser.TK_ID)
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==16:
                    self.state = 90
                    self.match(gramatica_v4Parser.ASSIGN)
                    self.state = 91
                    self.expr(0)


                self.state = 94
                self.match(gramatica_v4Parser.SEMICOLON)
                pass

            elif la_ == 2:
                localctx = gramatica_v4Parser.VarArrayDeclarationG4Context(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.type_()
                self.state = 97
                self.match(gramatica_v4Parser.TK_COR_IZQ)
                self.state = 98
                self.match(gramatica_v4Parser.TK_COR_DER)
                self.state = 99
                self.match(gramatica_v4Parser.TK_ID)
                self.state = 100
                self.match(gramatica_v4Parser.ASSIGN)
                self.state = 101
                self.arrayLiteral()
                self.state = 102
                self.match(gramatica_v4Parser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TK_COR_IZQ(self):
            return self.getToken(gramatica_v4Parser.TK_COR_IZQ, 0)

        def TK_COR_DER(self):
            return self.getToken(gramatica_v4Parser.TK_COR_DER, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v4Parser.ExprContext)
            else:
                return self.getTypedRuleContext(gramatica_v4Parser.ExprContext,i)


        def TK_COMA(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_v4Parser.TK_COMA)
            else:
                return self.getToken(gramatica_v4Parser.TK_COMA, i)

        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_arrayLiteral
